--- a/docker/cli/Gemfile
+++ b/docker/cli/Gemfile
@@ -9,3 +9,6 @@ gem 'hiera-eyaml'
 # CLI
 gem 'dry-cli', '=0.6'
 gem 'rainbow', '~> 3.0.0'
+gem 'aws-sdk-core', '3.112.1'
+gem 'aws-sdk-ec2', '1.220.0'
+gem 'aws-sdk-elasticloadbalancing', '1.29.0'
